Extracted gamespot revenue data

--- a/historical_stock_revenue_dashboard.ipynb
+++ b/historical_stock_revenue_dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -30,13 +30,9 @@
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\david\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (3.7)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\david\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (2.2.2)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\david\\anaconda3\\lib\\site-packages (from requests>=2.31->yfinance) (2024.7.4)\n",
-      "Collecting bs4\n",
-      "  Downloading bs4-0.0.2-py2.py3-none-any.whl.metadata (411 bytes)\n",
+      "Requirement already satisfied: bs4 in c:\\users\\david\\anaconda3\\lib\\site-packages (0.0.2)\n",
       "Requirement already satisfied: beautifulsoup4 in c:\\users\\david\\anaconda3\\lib\\site-packages (from bs4) (4.12.3)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\david\\anaconda3\\lib\\site-packages (from beautifulsoup4->bs4) (2.5)\n",
-      "Downloading bs4-0.0.2-py2.py3-none-any.whl (1.2 kB)\n",
-      "Installing collected packages: bs4\n",
-      "Successfully installed bs4-0.0.2\n"
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\david\\anaconda3\\lib\\site-packages (from beautifulsoup4->bs4) (2.5)\n"
      ]
     }
    ],
@@ -47,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "$TSLA: possibly delisted; no price data found  (1d 1925-11-17 -> 2024-10-23)\n"
+      "$TSLA: possibly delisted; no price data found  (1d 1925-11-18 -> 2024-10-24)\n"
      ]
     },
     {
@@ -117,7 +113,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,12 +154,261 @@
     "    cols = row.find_all('td')\n",
     "    date = cols[0].string\n",
     "    revenue = cols[1].string\n",
-    "    tesla_revenue = pd.concat([tesla_rev_df,pd.DataFrame({'Date':[date],\"Revenue\":[revenue]})])"
+    "    tesla_revenue = pd.concat([tesla_revenue,pd.DataFrame({'Date':[date],\"Revenue\":[revenue]})])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-06-30</td>\n",
+       "      <td>$28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010-03-31</td>\n",
+       "      <td>$21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009-12-31</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009-09-30</td>\n",
+       "      <td>$46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009-06-30</td>\n",
+       "      <td>$27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date Revenue\n",
+       "0  2010-06-30     $28\n",
+       "0  2010-03-31     $21\n",
+       "0  2009-12-31    None\n",
+       "0  2009-09-30     $46\n",
+       "0  2009-06-30     $27"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tesla_revenue.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extracting Gamespot Stock Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gme = yfinance.Ticker(\"GME\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2002-02-13 00:00:00-05:00</td>\n",
+       "      <td>1.620129</td>\n",
+       "      <td>1.693350</td>\n",
+       "      <td>1.603296</td>\n",
+       "      <td>1.691667</td>\n",
+       "      <td>76216000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002-02-14 00:00:00-05:00</td>\n",
+       "      <td>1.712707</td>\n",
+       "      <td>1.716074</td>\n",
+       "      <td>1.670626</td>\n",
+       "      <td>1.683250</td>\n",
+       "      <td>11021600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002-02-15 00:00:00-05:00</td>\n",
+       "      <td>1.683250</td>\n",
+       "      <td>1.687458</td>\n",
+       "      <td>1.658002</td>\n",
+       "      <td>1.674834</td>\n",
+       "      <td>8389600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2002-02-19 00:00:00-05:00</td>\n",
+       "      <td>1.666418</td>\n",
+       "      <td>1.666418</td>\n",
+       "      <td>1.578047</td>\n",
+       "      <td>1.607504</td>\n",
+       "      <td>7410400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2002-02-20 00:00:00-05:00</td>\n",
+       "      <td>1.615920</td>\n",
+       "      <td>1.662209</td>\n",
+       "      <td>1.603296</td>\n",
+       "      <td>1.662209</td>\n",
+       "      <td>6892800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Date      Open      High       Low     Close    Volume  \\\n",
+       "0 2002-02-13 00:00:00-05:00  1.620129  1.693350  1.603296  1.691667  76216000   \n",
+       "1 2002-02-14 00:00:00-05:00  1.712707  1.716074  1.670626  1.683250  11021600   \n",
+       "2 2002-02-15 00:00:00-05:00  1.683250  1.687458  1.658002  1.674834   8389600   \n",
+       "3 2002-02-19 00:00:00-05:00  1.666418  1.666418  1.578047  1.607504   7410400   \n",
+       "4 2002-02-20 00:00:00-05:00  1.615920  1.662209  1.603296  1.662209   6892800   \n",
+       "\n",
+       "   Dividends  Stock Splits  \n",
+       "0        0.0           0.0  \n",
+       "1        0.0           0.0  \n",
+       "2        0.0           0.0  \n",
+       "3        0.0           0.0  \n",
+       "4        0.0           0.0  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gme_data = gme.history(period= \"max\")\n",
+    "gme_data.reset_index(inplace = True)\n",
+    "gme_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extracted Gamespot Revenue Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gme_revenue = pd.DataFrame({\"Date\":[],\"Revenue\":[]}) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gme_revenue_url = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/labs/project/stock.html\"\n",
+    "gme_rev_html = requests.get(url).text \n",
+    "gme_soup = BeautifulSoup(tesla_rev_html,\"html.parser\")\n",
+    "for row in gme_soup.find_all('tbody')[1].find_all('tr'):\n",
+    "    cols = row.find_all('td')\n",
+    "    date = cols[0].string\n",
+    "    revenue = cols[1].string\n",
+    "    gme_revenue = pd.concat([tesla_revenue,pd.DataFrame({'Date':[date],\"Revenue\":[revenue]})])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -230,165 +475,14 @@
        "0  2009-06-30     $27"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tesla_revenue.tail()"
+    "gme_revenue.tail()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Extracting Gamespot Stock Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gme = yfinance.Ticker(\"GME\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Dividends</th>\n",
-       "      <th>Stock Splits</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2002-02-13 00:00:00-05:00</th>\n",
-       "      <td>1.620128</td>\n",
-       "      <td>1.693350</td>\n",
-       "      <td>1.603296</td>\n",
-       "      <td>1.691667</td>\n",
-       "      <td>76216000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2002-02-14 00:00:00-05:00</th>\n",
-       "      <td>1.712707</td>\n",
-       "      <td>1.716074</td>\n",
-       "      <td>1.670626</td>\n",
-       "      <td>1.683250</td>\n",
-       "      <td>11021600</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2002-02-15 00:00:00-05:00</th>\n",
-       "      <td>1.683251</td>\n",
-       "      <td>1.687459</td>\n",
-       "      <td>1.658002</td>\n",
-       "      <td>1.674834</td>\n",
-       "      <td>8389600</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2002-02-19 00:00:00-05:00</th>\n",
-       "      <td>1.666418</td>\n",
-       "      <td>1.666418</td>\n",
-       "      <td>1.578047</td>\n",
-       "      <td>1.607504</td>\n",
-       "      <td>7410400</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2002-02-20 00:00:00-05:00</th>\n",
-       "      <td>1.615920</td>\n",
-       "      <td>1.662210</td>\n",
-       "      <td>1.603296</td>\n",
-       "      <td>1.662210</td>\n",
-       "      <td>6892800</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               Open      High       Low     Close    Volume  \\\n",
-       "Date                                                                          \n",
-       "2002-02-13 00:00:00-05:00  1.620128  1.693350  1.603296  1.691667  76216000   \n",
-       "2002-02-14 00:00:00-05:00  1.712707  1.716074  1.670626  1.683250  11021600   \n",
-       "2002-02-15 00:00:00-05:00  1.683251  1.687459  1.658002  1.674834   8389600   \n",
-       "2002-02-19 00:00:00-05:00  1.666418  1.666418  1.578047  1.607504   7410400   \n",
-       "2002-02-20 00:00:00-05:00  1.615920  1.662210  1.603296  1.662210   6892800   \n",
-       "\n",
-       "                           Dividends  Stock Splits  \n",
-       "Date                                                \n",
-       "2002-02-13 00:00:00-05:00        0.0           0.0  \n",
-       "2002-02-14 00:00:00-05:00        0.0           0.0  \n",
-       "2002-02-15 00:00:00-05:00        0.0           0.0  \n",
-       "2002-02-19 00:00:00-05:00        0.0           0.0  \n",
-       "2002-02-20 00:00:00-05:00        0.0           0.0  "
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gme_data = gme.history(period= \"max\")\n",
-    "gme_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
